--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "dependencies": {
     "@apollo/server": "4.9.5",
     "@prisma/client": "5.7.1",
+    "bcryptjs": "^2.4.3",
     "class-validator": "0.14.0",
     "graphql": "16.8.1",
     "graphql-scalars": "1.22.4",
+    "jsonwebtoken": "^9.0.2",
     "reflect-metadata": "0.1.14",
     "type-graphql": "2.0.0-beta.3"
   },
