--- a/package.json
+++ b/package.json
@@ -6,13 +6,19 @@
   "dependencies": {
     "@apollo/server": "4.9.5",
     "@prisma/client": "5.7.1",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/dotenv": "^8.2.0",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/uuid": "^9.0.8",
     "bcryptjs": "^2.4.3",
     "class-validator": "0.14.0",
+    "dotenv": "^16.4.4",
     "graphql": "16.8.1",
     "graphql-scalars": "1.22.4",
     "jsonwebtoken": "^9.0.2",
     "reflect-metadata": "0.1.14",
-    "type-graphql": "2.0.0-beta.3"
+    "type-graphql": "2.0.0-beta.3",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/node": "20.10.6",
@@ -20,7 +26,8 @@
     "prisma": "5.7.1",
     "ts-node": "10.9.2",
     "ts-node-dev": "2.0.0",
-    "typescript": "5.3.3"
+    "typescript": "5.3.3",
+    "vitest": "^1.3.0"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
