--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "@apollo/server": "4.9.5",
     "@prisma/client": "5.7.1",
     "@types/bcryptjs": "^2.4.6",
-    "@types/dotenv": "^8.2.0",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/uuid": "^9.0.8",
     "bcryptjs": "^2.4.3",
     "class-validator": "0.14.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.4",
+    "express-jwt": "^8.4.1",
     "graphql": "16.8.1",
     "graphql-scalars": "1.22.4",
     "jsonwebtoken": "^9.0.2",
@@ -21,6 +22,7 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/node": "20.10.6",
     "@types/ws": "8.5.10",
     "prisma": "5.7.1",
@@ -29,6 +31,7 @@
     "typescript": "5.3.3",
     "vitest": "^1.3.0"
   },
+  
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
   }
