--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "graphql-scalars": "1.22.4",
     "jsonwebtoken": "^9.0.2",
     "reflect-metadata": "0.1.14",
+    "resend": "^3.2.0",
     "type-graphql": "2.0.0-beta.3",
     "uuid": "^9.0.1"
   },
@@ -31,7 +32,6 @@
     "typescript": "5.3.3",
     "vitest": "^1.3.0"
   },
-  
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
   }
