feature/sign wia google

--- a/package.json
+++ b/package.json
@@ -6,14 +6,17 @@
   "dependencies": {
     "@apollo/server": "4.9.5",
     "@prisma/client": "5.7.1",
+    "@types/axios": "^0.14.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/uuid": "^9.0.8",
+    "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "class-validator": "0.14.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.4",
     "express-jwt": "^8.4.1",
+    "google-auth-library": "^9.11.0",
     "graphql": "16.8.1",
     "graphql-scalars": "1.22.4",
     "jsonwebtoken": "^9.0.2",
