--- a/package.json
+++ b/package.json
@@ -5,21 +5,31 @@
   },
   "dependencies": {
     "@apollo/server": "4.9.5",
+    "@apollo/server-plugin-response-cache": "^4.1.3",
+    "@apollo/utils.keyvadapter": "^3.1.0",
+    "@keyv/redis": "^2.8.5",
     "@prisma/client": "5.7.1",
     "@types/axios": "^0.14.0",
     "@types/bcryptjs": "^2.4.6",
+    "@types/connect-redis": "^0.0.23",
+    "@types/express-session": "^1.18.0",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/redis": "^4.0.11",
     "@types/uuid": "^9.0.8",
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "class-validator": "0.14.0",
+    "connect-redis": "^7.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.4",
     "express-jwt": "^8.4.1",
+    "express-session": "^1.18.0",
     "google-auth-library": "^9.11.0",
     "graphql": "16.8.1",
     "graphql-scalars": "1.22.4",
     "jsonwebtoken": "^9.0.2",
+    "keyv": "^4.5.4",
+    "redis": "^4.6.15",
     "reflect-metadata": "0.1.14",
     "resend": "^3.2.0",
     "type-graphql": "2.0.0-beta.3",
