--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.7'
-
 services:
   main:
     container_name: main
@@ -15,6 +13,7 @@ services:
     command: bash -c "npx prisma generate && npx prisma migrate dev --name init && npm run dev"
     depends_on:
       - postgres
+      - redis
     restart: always
 
   postgres:
@@ -30,5 +29,15 @@ services:
       - pgdata:/var/lib/postgresql@15/data
     restart: always
 
+  redis:
+    container_name: redis
+    image: redis:alpine
+    ports:
+      - "6379:6379"
+    volumes:
+      - redisdata:/data
+    restart: always
+
 volumes:
   pgdata:
+  redisdata:
