--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     ports:
       - 4000:4000
       - 9229:9229
-    command: bash -c "npx prisma generate && npx prisma migrate dev --name init && npm run dev"
+    command: bash -c "npx prisma generate && npx prisma migrate dev --name init && npx prisma db seed && npm run dev"
     depends_on:
       - postgres
       - redis
