--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,16 +2,20 @@
   "include": [
     "src/**/*"
   ],
+  "exclude": [
+    "node_modules",
+    "**/*.spec.ts"
+  ],
   "compilerOptions": {
     /* Basic Options */
-    "target": "ES2016", /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', 'ES2018', 'ES2019' or 'ESNEXT'. */
+    "target": "es2018", /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', 'ES2018', 'ES2019' or 'ESNEXT'. */
     "module": "commonjs", /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */
     "lib": [
-      "esnext.asynciterable",
-      "ES2016",
-      "dom"
+      "es2018",
+      "esnext.asynciterable"
     ], /* Specify library files to be included in the compilation. */
-    "outDir": "dist",                        /* Redirect output structure to the directory. */
+    "outDir": "./dist",                        /* Redirect output structure to the directory. */
+    "rootDir": "./src",
     "strict": true, /* Enable all strict type-checking options. */
     "strictPropertyInitialization": false,  /* Enable strict checking of property initialization in classes. */
     "esModuleInterop": true, /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */
