--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "typegraphql-example",
   "scripts": {
-    "dev": "ts-node-dev --no-notify --respawn --transpile-only src/index.ts",
+    "dev": "tsx watch src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js"
   },
@@ -10,17 +10,22 @@
     "@apollo/server-plugin-response-cache": "^4.1.3",
     "@apollo/utils.keyvadapter": "^3.1.0",
     "@keyv/redis": "^2.8.5",
-    "@prisma/client": "5.7.1",
+    "@prisma/client": "^5.20.0",
     "@types/axios": "^0.14.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/connect-redis": "^0.0.23",
+    "@types/express": "^5.0.0",
     "@types/express-session": "^1.18.0",
+    "@types/graphql-upload": "^16.0.7",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/multer": "^1.4.12",
     "@types/redis": "^4.0.11",
     "@types/uuid": "^9.0.8",
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
+    "blurhash": "^2.0.5",
     "class-validator": "0.14.0",
+    "cloudinary": "^2.5.1",
     "connect-redis": "^7.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.4",
@@ -29,25 +34,31 @@
     "google-auth-library": "^9.11.0",
     "graphql": "16.8.1",
     "graphql-scalars": "1.22.4",
+    "graphql-upload": "^17.0.0",
+    "graphql-upload-minimal": "^1.6.1",
     "jsonwebtoken": "^9.0.2",
     "keyv": "^4.5.4",
+    "multer": "^1.4.5-lts.1",
     "redis": "^4.6.15",
-    "reflect-metadata": "0.1.14",
+    "reflect-metadata": "^0.1.14",
     "resend": "^3.2.0",
+    "sharp": "^0.33.5",
     "type-graphql": "2.0.0-beta.3",
+    "typedi": "^0.10.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/node": "20.10.6",
     "@types/ws": "8.5.10",
-    "prisma": "5.7.1",
+    "prisma": "^5.20.0",
     "ts-node": "10.9.2",
     "ts-node-dev": "2.0.0",
+    "tsx": "^4.19.2",
     "typescript": "5.3.3",
     "vitest": "^1.3.0"
   },
   "prisma": {
-    "seed": "ts-node prisma/seed.ts"
+    "seed": "tsx prisma/seed.ts"
   }
 }
