--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "express-session": "^1.18.0",
     "google-auth-library": "^9.11.0",
     "graphql": "16.8.1",
-    "graphql-scalars": "1.22.4",
+    "graphql-fields": "^2.0.3",
+    "graphql-type-json": "^0.3.2",
     "graphql-upload": "^17.0.0",
     "graphql-upload-minimal": "^1.6.1",
     "jsonwebtoken": "^9.0.2",
@@ -49,12 +50,14 @@
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
+    "@types/graphql-fields": "^1.3.9",
     "@types/node": "20.10.6",
     "@types/ws": "8.5.10",
     "prisma": "^5.20.0",
     "ts-node": "10.9.2",
     "ts-node-dev": "2.0.0",
     "tsx": "^4.19.2",
+    "typegraphql-prisma": "^0.28.0",
     "typescript": "5.3.3",
     "vitest": "^1.3.0"
   },
